# agent-workbench

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  vitest.config.ts
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  cross-platform-packaging.yml  release-ghcr.yml  release.yml
.kiro/hooks/: agent-workbench-post-write-feedback.kiro.hook
.well-known/mcp/: server-card.json
docs/adr/: 0001-local-first-repo-runtime.md  0002-sqlite-graph-evidence-store.md  0003-typescript-runtime.md  0004-semantic-evidence-gates.md
docs/architecture/: system-architecture.md
docs/backlog/: 033-codex-npm-marketplace.md  033-kiro-shell-free-launcher.md  033-npm-tarball-install-flow.md  033-turnkey-tree-sitter-core-build.md  README.md
scripts/: install-agent-workbench-package.sh  install-agent-workbench-repo-local.sh  install-codex-hooks.mjs  materialize-codex-repo-plugin.mjs  postinstall.mjs  rebuild-native.mjs  sync-claude-plugin-hooks.d.mts  sync-claude-plugin-hooks.mjs  validate-agent-skills.mjs  validate-agent-workbench-plugin.mjs
src/: index.ts  server.ts
src/graph/: store.ts
tools/: README.md
tools/devcli/: README.md  pyproject.toml
tools/devcli/src/auriora_dev/: __init__.py  cli.py  repo.py  runner.py
tools/devcli/src/auriora_dev/commands/: cache.py  check.py  doctor.py  mcp.py  package.py  plugin.py  release.py  release_notes.py  spec.py
tools/devcli/src/proj_devcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/devcli/tests/: __init__.py  test_cli.py
(+850 files in other folders)
