# Copyright (C) 2026 Auriora
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench-devcli"
version = "0.1.0"
description = "Agent Workbench developer CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
awb = "auriora_dev.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
